fix(rgaa): contrast

--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -252,3 +252,7 @@ body {
 .flex-gap {
   gap: var(--gap, 0.5rem);
 }
+
+.text-mention-grey {
+  color: var(--text-mention-grey);
+}
